[workspace]
resolver = "2"
members = [
    "strum",
    "strum_macros",
    "strum_tests",
    "strum_nostd_tests"
]

[workspace.package]
version = "1.1.1"
authors = [ "Charles Lechasseur <shiftingbeard@outlook.com>" ]

license = "MIT"

homepage = "https://github.com/clechasseur/gratte#readme"
repository = "https://github.com/clechasseur/gratte"

description = "Helpful macros for working with enums and strings; forked from strum"

keywords = [ "enum", "string", "macros", "proc-macros" ]
categories = [ "development-tools::procedural-macro-helpers", "parsing" ]

[workspace.dependencies]
gratte_macros = { path = "strum_macros", version = "1.1.0" }
heck = "0.5.0"
phf = "0.12.1"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.104"

# Dev dependencies:
clap = "4.5.41"
enum_variant_type = "=0.2.0"
structopt = "0.3.26"
