[workspace]
resolver = "2"
members = [
    "strum",
    "strum_macros",
    "strum_tests",
    "strum_nostd_tests"
]

[workspace.package]
version = "2.0.0"
authors = [ "Charles Lechasseur <shiftingbeard@outlook.com>" ]
rust-version = "1.71.1"

license = "MIT"

homepage = "https://github.com/clechasseur/gratte#readme"
repository = "https://github.com/clechasseur/gratte"

description = "Helpful macros for working with enums and strings; forked from strum"

keywords = [ "enum", "string", "macros", "proc-macros" ]
categories = [ "development-tools::procedural-macro-helpers", "parsing" ]

[workspace.dependencies]
gratte_macros = { path = "strum_macros", version = "2.0.0" }
heck = "0.5.0"
phf = "0.13.1"
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = "2.0.117"

# Dev dependencies:
clap = "4.6.1"
enum_variant_type = "=0.2.0"
structopt = "0.3.26"
