[package]
name = "gratte"
version.workspace = true
authors.workspace = true
edition = "2021"
rust-version = "1.66.1"

readme = "../README.md"
license.workspace = true

homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/gratte/"

description.workspace = true

keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
targets = [ "x86_64-unknown-linux-gnu" ]
rustc-args = [ "--cfg", "docsrs" ]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [ "cfg(tarpaulin)", "cfg(tarpaulin_include)", "cfg(coverage)", "cfg(coverage_nightly)" ]

[features]
default = ["std", "derive"]

derive = ["dep:gratte_macros"]
phf = ["dep:phf"]
std = []

[dependencies]
gratte_macros = { workspace = true, optional = true }
phf = { workspace = true, optional = true, features = ["macros"] }

[dev-dependencies]
gratte_macros = { path = "../strum_macros" }
