[package]
name = "gratte_macros"
version.workspace = true
authors.workspace = true
edition = "2021"
rust-version = "1.66.1"

readme = "../README.md"
license.workspace = true

homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/gratte_macros/"

description.workspace = true

keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
targets = [ "x86_64-unknown-linux-gnu" ]
rustc-args = [ "--cfg", "docsrs" ]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [ "cfg(tarpaulin)", "cfg(tarpaulin_include)", "cfg(coverage)", "cfg(coverage_nightly)" ]

[lib]
proc-macro = true
name = "gratte_macros"

[dependencies]
heck = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
rustversion = { workspace = true }
syn = { workspace = true, features = ["parsing"] }

[dev-dependencies]
gratte = { path = "../strum" }
