[package]
name = "gratte_tests"
version.workspace = true
authors.workspace = true
edition = "2021"
rust-version = "1.66.1"

publish = false

[features]
default = []
test_phf = ["gratte/phf"]

[dependencies]
gratte = { path = "../strum" }
gratte_macros = { path = "../strum_macros" }
clap = { workspace = true }
enum_variant_type = { workspace = true }
structopt = { workspace = true }

[dev-dependencies]
rustversion = { workspace = true }
